# PimenSlack

./: .gitignore  CMakeLists.txt  Makefile  README.md  client  game  pq.txt  private.txt  public.txt  public_keys.txt  rsa_keys.c  sdlalternativa  server  server.c
client/: package-lock.json  package.json
client/chat-app-backend/: package-lock.json  package.json
client/src/: index.js  login.json  server.js  test.json
client/src/components/: AuthContext.js  Encryption.js  GroupParticipants.css  GroupParticipants.jsx  Participants.jsx  WebSocketConnection.js  activeUsers.jsx  chatCard.css  chatCard.jsx  createGroup.jsx  indexedDB.js  notifications.css  notifications.jsx
client/src/database/: connection.js
client/src/styles/: App.css  Chat.css  Login.css  MainMenu.css  MainPage.css  Register.css
client/src/views/: App.js  Chat.jsx  Login.jsx  MainMenu.jsx  MainPage.jsx  Register.jsx
src/: button.c  button.h  cipher  client.c  mysdl_functions.c  mysdl_functions.h  mysql_functions.c  mysql_functions.h  pq.txt  private.txt  rsa.h  rsa_keys  rsa_keys.c  rsa_program
src/client/: client  client.c  client_testing.c
src/client/client_c/: clientUI.c  interface.glade  myapp
src/libraries/: client  client.c  mysql_functions.c  mysql_functions.h  rsa.h  server  server.c
src/server/: client  client.c  list.txt  server  server.c
test/: package-lock.json  package.json  server.c
test/node-server/: client.js  package-lock.json  package.json
test/src/: App.js
